--- a/opendata/index.html
+++ b/opendata/index.html
@@ -268,7 +268,7 @@ body > script {display: none !important;}
     <h3 id='dechets_nantes_metropole'>Déchets</h3>
 	<div class='opendata'>
       <div class='liens'>Lien de téléchargement : <a href='http://www.mieuxtrieranantes.fr/opendata/data/dechets_nantes.xls' target='_blank'>dechets_nantes.xls</a></div>
-      <div class='date_mise_a_jour'>Date de mise-à-jour : 01/2017</div>
+      <div class='date_mise_a_jour'>Date de mise-à-jour : 01/2018</div>
        <div class='summary'>Une liste des déchets permettant de retrouver les catégories de traitement (165 déchets environ).</div>
 	  <div class='plusdinfos' onClick="show_hide_div('desc_dechets_nantes_metropole')">Plus d'infos</div>
 	  <div class='description' id="desc_dechets_nantes_metropole">Description : Pour chaque déchet un nom, une description, une image, les mots qui peuvent correspondre, les modes de collecte qui correspondent, une catégorie usuelle, une catégorie de traitement.<br/>
@@ -279,33 +279,6 @@ body > script {display: none !important;}
 	   <div class='license'>Licence : Open Database License (ODbL)</div>
 	</div>
 
-	<h3 id='dechet_categories_usuelles_nantes_metropole'>Catégories usuelles des déchets (Nantes Métropole)</h3>
-	<div class='opendata'>
-      <div class='liens'>Lien de téléchargement : <a href='http://www.mieuxtrieranantes.fr/opendata/data/categories_usuelles_des_dechets_nantes.xls' target='_blank'>categories_usuelles_des_dechets_nantes.xls</a></div>
-      <div class='date_mise_a_jour'>Date de mise-à-jour : 01/2017</div>
-      <div class='summary'>Description : les catégories usuelles sont destinées à permettre à un utilisateur de retrouver naturellement son déchet. Exemple : le déchet « cannette » est dans la catégorie « Métal ».</div>
-	  <div class='plusdinfos' onClick="show_hide_div('id2')">Plus d'infos</div>
-	  <div class='description' id="id2">
-	  Exemple de catégories : Plastique, Brique, Papier-Carton, Métal, Déchets vert + Bois, Verre + Vaisselle, Vêtement + Tissu, Encombrant + Électronique, Divers + Médicament + Toxique
-	  </div>
-	  <div class='license'>Licence : Open Database License (ODbL)</div>
-	</div>
-
-	<h3 id='dechet_categories_traitement_nantes_metropole'>Catégories de traitement des déchets (Nantes Métropole)</h3>
-	<div class='opendata'>
-      <div class='liens'>Lien de téléchargement : <a href='http://www.mieuxtrieranantes.fr/opendata/data/categories_traitements_des_dechets_nantes.xls' target='_blank'>categories_traitements_des_dechets_nantes.xls</a></div>
-      <div class='date_mise_a_jour'>Date de mise-à-jour : 01/2017</div>
-      <div class='summary'>Description : les catégories de traitement sont des regroupements de déchets qui correspondent à des mêmes processus de traitement pour le tri. Par exemple les déchets D3E.</div>
-	  <div class='license'>Licence : Open Database License (ODbL)</div>
-	</div>
-
-	<h3 id='dechet_conseils_nantes_metropole'>Conseils pour les déchets (Nantes Métropole)</h3>
-	<div class='opendata'>
-      <div class='liens'>Lien de téléchargement : <a href='http://www.mieuxtrieranantes.fr/opendata/data/conseils_dechets_nantes.xls'>conseils_dechets_nantes.xls</a></div>
-      <div class='date_mise_a_jour'>Date de mise-à-jour : 01/2017</div>
-      <div class='summary'></div>
-	  <div class='license'>Licence : Open Database License (ODbL)</div>
-	</div>
 	
 	<h3 id='dechets_photos'>Photos de déchets</h3>
 	<div class='opendata'>
@@ -338,11 +311,23 @@ body > script {display: none !important;}
 	  </div>
       <div class='date_mise_a_jour'>Date de mise-à-jour : 03/2017</div>
        <div class='summary'>Description : Vidéos prises lors des visites</div>
-	  <div class='license'>Licence : Ces images sont sous licence « Creative Commons Attribution (BY) » (en français « paternité »).<br/>
+	  <div class='license'>Licence : Ce contenu est sous licence « Creative Commons Attribution (BY) » (en français « paternité »).<br/>
         « Le titulaire des droits autorise toute exploitation de l’œuvre, y compris à des fins commerciales, ainsi que la création d’œuvres dérivées, dont la distribution est également autorisé sans restriction, à condition de l’attribuer à son l’auteur en citant son nom. »<br/>
       </div>
     </div>
 
+	<h3 id='filiere_tri'>Photos filière tri</h3>
+	<div class='opendata'>
+	  <div class='liens'>Liens de téléchargement : 
+        - <a href='http://www.mieuxtrieranantes.fr/docs/medias/FiliereTri' target='_blank'>les photos en 1240×1240</a><br/>
+	  </div>
+      <div class='date_mise_a_jour'>Date de mise-à-jour : 11/2017</div>
+       <div class='summary'>Description : Photos prises lors des visites</div>
+	  <div class='license'>Licence : Ces images sont sous licence « Creative Commons Attribution (BY) » (en français « paternité »).<br/>
+        « Le titulaire des droits autorise toute exploitation de l’œuvre, y compris à des fins commerciales, ainsi que la création d’œuvres dérivées, dont la distribution est également autorisé sans restriction, à condition de l’attribuer à son l’auteur en citant son nom. »<br/>
+      </div>
+    </div>
+	
 	<h3 id='palenv'>Fiche Pratique : installation pour scoutisme sur le tri des déchets</h3>
 	<div class='opendata'>
 	  <div class='liens'>Liens de téléchargement : <a href='http://www.mieuxtrieranantes.fr/opendata/data/palenv.doc' target='_blank'>Fichier doc</a><br/>
@@ -361,6 +346,27 @@ body > script {display: none !important;}
 	  <div class='license'>Licence : Open Database License (ODbL)</div>
     </div>
 	
+	<h3 id='ateliers_reparation_collaboratifs_loireatlantique_liste'>Ateliers réparation collaboratifs de Loire-Atlantique : liste</h3>
+	<div class='opendata'>
+	  <div class='liens'>Liens de téléchargement : <a href='http://www.mieuxtrieranantes.fr/opendata/data/AteliersReparationCollaboratifs_LoireAtlantique.ods' target='_blank'>tableur (format odt)</a><br/>
+	  </div>
+      <div class='date_mise_a_jour'>Date de mise-à-jour : 11/2017</div>
+       <div class='summary'>Description : Les associations "Repair Café du Vignoble nantais" et "Mieux trier à Nantes" réalisent pour Ecopôle une liste des ateliers de réparation collaboratifs de Loire-Atlantique.<br/>Le formulaire d'inscription est ici : <a href="https://docs.google.com/forms/d/e/1FAIpQLSd95D0AvY4B7biFf7tQz5TNDDg5_4wZXP4U3IOlxkS4McCrxw/viewform" target=_new>https://docs.google.com/forms/d/e/1FAIpQLSd95D0AvY4B7biFf7tQz5TNDDg5_4wZXP4U3IOlxkS4McCrxw/viewform</a></div>
+	  <div class='license'>Licence : Open Database License (ODbL)</div>
+	  <div class='author'>Émetteur : associations "Repair Café du Vignoble nantais" et "Mieux trier à Nantes"</div>
+    </div>
+		
+	<h3 id='ateliers_reparation_collaboratifs_loireatlantique_photos'>Ateliers réparation collaboratifs de Loire-Atlantique : photos</h3>
+	<div class='opendata'>
+	  <div class='liens'>Liens de téléchargement : <a href='http://mieuxtrieranantes.fr/docs/medias/AteliersReparationCollaboratifsLoireAtlantique' target='_blank'>Images JPG et PNG</a><br/>
+	  </div>
+      <div class='date_mise_a_jour'>Date de mise-à-jour : 11/2017</div>
+       <div class='summary'>Description : Les associations "Repair Café du Vignoble nantais" et "Mieux trier à Nantes" réalisent pour Ecopôle une liste des ateliers de réparation collaboratifs de Loire-Atlantique. </div>
+	  <div class='license'>Licence : Open Database License (ODbL)</div>
+	  <div class='author'>Émetteur : associations "Repair Café du Vignoble nantais" et "Mieux trier à Nantes"</div>
+    </div>	
+	
+	
    <h2>Données fournies par d'autres structures</h2>
    
    <h3 id='conteneurs_le_relais'>Conteneurs Le Relais sur Nantes Métropole</h3>
@@ -369,7 +375,7 @@ body > script {display: none !important;}
 	  </div>
       <div class='date_mise_a_jour'>Date de mise-à-jour : 11/2016</div>
        <div class='summary'>Description : Emplacement des différents conteneurs de vêtements (environ 50)</div>
-	   <div class='author'>Emetteur : Le Relais</div>
+	   <div class='author'>Émetteur : Le Relais</div>
 	  <div class='license'>Licence : inconnue</div>
     </div>
 	
@@ -379,11 +385,11 @@ body > script {display: none !important;}
 	  </div>
       <div class='date_mise_a_jour'>Date de mise-à-jour : données temps réel</div>
        <div class='summary'>Description : Emplacement des différents composteurs collectifs sur Nantes Métropole (environ 150 composteurs)</div>
-	   <div class='author'>Emetteur : Compostri</div>
+	   <div class='author'>Émetteur : Compostri</div>
 	  <div class='license'>Licence : Open Data (licence précise inconnue, mais Compostri est OK)</div>
     </div>
 
-	<h3 id='videos_ecoevenemens'>Vidéos : défis de l'éco-responsabilité événementielle.</h3>
+	<h3 id='videos_ecoevenemens'>Vidéos : défis de l'éco-responsabilité évènementielle.</h3>
 	<div class='opendata'>
 	  <div class='liens'>Liens de téléchargement : <br/>
 	  - Défi 1, Gérer les déchets : <a href='https://vimeo.com/album/3660413/video/142122899' target='_blank'>Vidéo</a><br/>
@@ -392,11 +398,11 @@ body > script {display: none !important;}
 	  - Toutes les vidéos : <a href='https://vimeo.com/album/3660413' target='_blank'>https://vimeo.com/album/3660413</a>
 	  </div>
       <div class='date_mise_a_jour'>Date de mise-à-jour : 04/2017</div>
-       <div class='summary'>Description : L'association "Marie Et Alphonse" a réalisé pour le compte de Nantes Métropole, huit tutoriels vidéos, sur les défis de l'éco-responsabilité événementielle.</div>
+       <div class='summary'>Description : L'association "Marie Et Alphonse" a réalisé pour le compte de Nantes Métropole, huit tutoriels vidéos, sur les défis de l'éco-responsabilité évènementielle.</div>
 	  <div class='license'>Licence : Ces images sont sous licence « Creative Commons Attribution (BY) » (en français « paternité »).<br/>
         « Le titulaire des droits autorise toute exploitation de l’œuvre, y compris à des fins commerciales, ainsi que la création d’œuvres dérivées, dont la distribution est également autorisé sans restriction, à condition de l’attribuer à son l’auteur en citant son nom. »<br/>
       </div>
-	  <div class='author'>Emetteur : Nantes métropole</div>
+	  <div class='author'>Émetteur : Nantes métropole</div>
     </div>
 	
 	<h3 id='guide_zero_dechet_nantes'>Guide Pratique : zéro déchet (sur Nantes)</h3>
@@ -406,7 +412,7 @@ body > script {display: none !important;}
       <div class='date_mise_a_jour'>Date de mise-à-jour : 04/2017</div>
        <div class='summary'>Description : Guide rapide des gestes de base, créé dans le cadre de l'anniversaire de Nuit Debout Nantes.</div>
 	  <div class='license'>Licence : Open Database License (ODbL)</div>
-	  <div class='author'>Emetteur : Charles Duvergey</div>
+	  <div class='author'>Émetteur : Charles Duvergey</div>
     </div>
 	
 	<h3 id='bouchons_damour'>Collecteurs Bouchons d'Amour</h3>
@@ -415,7 +421,7 @@ body > script {display: none !important;}
 	  </div>
       <div class='date_mise_a_jour'>Date de mise-à-jour : 04/2017</div>
       <div class='summary'>Description : Emplacements des collecteurs accessibles au public, sur Nantes Métropole et les environs. Transmis par l'association "Bouchons d'Amour".</div>
-	  <div class='author'>Emetteur : Bouchons d'Amour</div>
+	  <div class='author'>Émetteur : Bouchons d'Amour</div>
 	  <div class='license'>Licence : Open Database License (ODbL)</div>
     </div>
 	
@@ -425,8 +431,8 @@ body > script {display: none !important;}
 	  </div>
       <div class='date_mise_a_jour'>Date de mise-à-jour : temps réel</div>
       <div class='summary'>Description : Calendrier des prochaines collectes collectives de déchets.</div>
-	  <div class='author'>Emetteur : PP Plastik Pickup</div>
-	  <div class='license'>Licence : inconnu (mais Open Data)</div>
+	  <div class='author'>Émetteur : PP Plastic Pickup - <a href='https://www.plastiques.eu/' target='_blank'>https://www.plastiques.eu/</a></div>
+	  <div class='license'>Licence : Open Database License (ODbL)</div>
     </div>
 	
 	<br/>
